WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238634
REGRESSION(
r292051
-
r292022
): [ iOS ] media/video-object-fit.html is a constant image failure
https://bugs.webkit.org/show_bug.cgi?id=238634
Summary
REGRESSION(r292051-r292022): [ iOS ] media/video-object-fit.html is a constan...
Dawn Morningstar
Reported
2022-03-31 14:22:51 PDT
media/video-object-fit.html is a constant image failure on iOS queue. Regression range appears to be
r292051
-
r292022
. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=media%2Fvideo-object-fit.html
DIFF images will be attached. DIFF-URL:
https://build.webkit.org/results/Apple-iPadOS-15-Simulator-Release-WK2-Tests/r292054%20(1434)/media/video-object-fit-diffs.html
Attachments
media/video-object-fit.html Diffs
(69.85 KB, application/zip)
2022-03-31 14:24 PDT
,
Dawn Morningstar
no flags
Details
Patch
(9.93 KB, patch)
2022-04-06 15:43 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(9.89 KB, patch)
2022-04-07 11:15 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dawn Morningstar
Comment 1
2022-03-31 14:24:11 PDT
Created
attachment 456280
[details]
media/video-object-fit.html Diffs
Radar WebKit Bug Importer
Comment 2
2022-03-31 14:25:12 PDT
<
rdar://problem/91125776
>
Robert Jenner
Comment 3
2022-03-31 14:36:35 PDT
Marked expectation as [ ImageOnlyFailure ] here:
https://commits.webkit.org/249083@main
Due to negative impact on EWS.
Jer Noble
Comment 4
2022-04-06 15:43:47 PDT
Created
attachment 456874
[details]
Patch
Jer Noble
Comment 5
2022-04-07 11:15:39 PDT
Created
attachment 456949
[details]
Patch
EWS
Comment 6
2022-04-11 14:43:59 PDT
Committed
r292725
(
249510@main
): <
https://commits.webkit.org/249510@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456949
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug