REGRESSION(r292051-r292022): [ iOS ] media/video-object-fit.html is a constant image failure https://bugs.webkit.org/show_bug.cgi?id=238634 <rdar://problem/91125776>

Reviewed by Eric Carlson.

Source/WebCore:

Depending on whether setVideoFullscreenGravity() or updateVideoLayerGravity() is called first,
the wrong video gravity will be set. Rather than have two places where video gravity is set,
just have setVideoFullscreenGravity() set an ivar, and then call updateVideoLayerGravity(),
which will set the correct gravity based on whether fullscreen is active or not.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.h:
* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::setVideoFullscreenLayer):
(WebCore::MediaPlayerPrivateAVFoundationObjC::setVideoFullscreenGravity):
(WebCore::MediaPlayerPrivateAVFoundationObjC::updateVideoLayerGravity):

Source/WebKit:

Use an `std::<optional> bool` rather than `bool` to cache values sent to WebContent, so that
when a new value is pushed in, it's sent to WebContent the first time regardless of the default
value.

* WebProcess/GPU/media/MediaPlayerPrivateRemote.h:

LayoutTests:

* platform/ios-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/249510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292725 268f45cc-cd09-0410-ab3c-d52691b4dbfc